# Data-Visualization-Projects

./: README.md
Final Project/: Final_workbook_Shivam.twb
Project1/: README.md
Project2/: ~$README.md
Project3/: Shivam_Workbook.twb  ~$README.md
Project3/NPU/: NPU.shp
Project3/Neighborhoods/: Neighborhoods.dbf  Neighborhoods.shp
Project4/: README.md
Project5/: README.md
Project5/Assignment5/datasets/: torus.vtu
Project5/new-ttk-files/core/base/levelSets/: CMakeLists.txt  LevelSets.cpp  LevelSets.h
Project5/new-ttk-files/core/vtk/ttkLevelSets/: CMakeLists.txt  ttkLevelSets.cpp  ttkLevelSets.h
Project5/new-ttk-files/paraview/LevelSets/: CMakeLists.txt  LevelSets.xml
Project5/new-ttk-files/standalone/LevelSets/cmd/: CMakeLists.txt  main.cpp
Project5/new-ttk-files/standalone/LevelSets/gui/: CMakeLists.txt  main.cpp
Project6/: README.md
Project6/datasets/: vector_field10.vtk  vector_field100.vtk  vector_field5.vtk
Project6/new-ttk-files/core/base/vectorFieldEuler/: VectorFieldEuler.cpp  VectorFieldEuler.h
Project6/new-ttk-files/core/vtk/ttkVectorFieldEuler/: ttkVectorFieldEuler.h  (+1 more)
Project6/new-ttk-files/paraview/VectorFieldEuler/: VectorFieldEuler.xml
assignment-2-shivam7066/: README.md
assignment-3-shivam7066/: README.md  Shivam_Workbook.twb
assignment-3-shivam7066/NPU/: NPU.dbf  NPU.shx
assignment-3-shivam7066/Neighborhoods/: Neighborhoods.shx
assignment-4-shivam7066/files_for_ass4/: README.md
assignment-4-shivam7066/files_for_ass5/: README.md
assignment-4-shivam7066/files_for_ass6/: README.md
project-shivam7066/: README.md
